[package]
name = "nix-base32"
version = "0.1.1-alpha.0"
authors = ["Peter Kolloch <info@eigenvalue.net>"]
edition = "2018"
license = "Apache-2.0"
description = "Provides a nix (as in NixOS) compatible base32 encoding."
repository = "https://github.com/kolloch/nix-base32"
readme = "README.md"
keywords = ["nixos", "nix", "base32", "hash"]

[dev-dependencies]
hex = "0.4"
